<resources>
    <string name="app_name">RelayClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Relay Client</string>
    <string name="nav_header_subtitle">Testing Version</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <string name="button_refresh">Refresh</string>
    <string name="button_delay">Set Delay</string>
    <string name="button_duration">Set Duration</string>
    <string name="button_set">Set</string>
    <string name="button_start">Start</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_configure">Configure Timer</string>

    <string name="header_hours">Hours</string>
    <string name="header_minutes">Minutes</string>
    <string name="header_seconds">Seconds</string>
    <string name="placeholder_time">00:00:00</string>

    <string name="header_server_main">Primary (Local) Server IP Address / Hostname:</string>
    <string name="header_server_fallback">Fallback (External) Server IP Address / Hostname:</string>
    <string name="header_server_port">Server Port:</string>
    <string name="button_settings_save">Save Settings</string>

    <string name="preference_file_ips">ipaddresses</string>
</resources>
