<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:paddingRight="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/delayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_schedule_black_24dp"
                android:drawablePadding="@dimen/button_icon_padding"
                android:text="@string/button_delay"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/delayDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/placeholder_time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/durationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_timelapse_black_24dp"
                android:drawablePadding="@dimen/button_icon_padding"
                android:text="@string/button_duration"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/durationDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/placeholder_time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_start" />
    </LinearLayout>

</LinearLayout>