<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/primaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/header_server_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/primaryAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="none|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/primaryHeader"
        app:layout_constraintTop_toBottomOf="@+id/primaryHeader" />

    <EditText
        android:id="@+id/fallbackAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="none|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fallbackHeader"
        app:layout_constraintTop_toBottomOf="@+id/fallbackHeader" />

    <TextView
        android:id="@+id/fallbackHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/header_server_fallback"
        app:layout_constraintStart_toStartOf="@+id/primaryAddress"
        app:layout_constraintTop_toBottomOf="@+id/primaryAddress" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_save_black_24dp"
        android:drawablePadding="@dimen/button_icon_padding"
        android:text="@string/button_settings_save"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/serverPort"
        app:layout_constraintTop_toBottomOf="@+id/serverPort" />

    <TextView
        android:id="@+id/portHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/header_server_port"
        app:layout_constraintStart_toStartOf="@+id/fallbackAddress"
        app:layout_constraintTop_toBottomOf="@+id/fallbackAddress" />

    <EditText
        android:id="@+id/serverPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/portHeader"
        app:layout_constraintTop_toBottomOf="@+id/portHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>